feat(bo): add new sharing links section for LINK type